fix position collapse to modal

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -346,6 +346,10 @@ ul.ul-step{
   padding-top: 10px !important;
   padding-bottom: 10px !important;
 }
+.py-4 {
+  padding-top: 20px !important;
+  padding-bottom: 20px !important;
+}
 .m-b-5 {
   margin-bottom: 25px !important;
 }
